--- a/src/System/Add_Movie_dash.form
+++ b/src/System/Add_Movie_dash.form
@@ -206,12 +206,12 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="jTable1">
+            <Component class="javax.swing.JTable" name="JTable1">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="2" rowCount="4">
-                    <Column editable="false" title="Name" type="java.lang.Object"/>
-                    <Column editable="false" title="Cinema Hall No." type="java.lang.Object"/>
+                    <Column editable="false" title="Movie Name" type="java.lang.Object"/>
+                    <Column editable="false" title="Cinema Hall No" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -281,7 +281,7 @@
         <Component class="javax.swing.JTextField" name="JTF_Rotten_Tomatoes">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="1100" y="100" width="230" height="30"/>
+              <AbsoluteConstraints x="1100" y="100" width="70" height="30"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -302,12 +302,13 @@
         <Component class="javax.swing.JComboBox" name="JComboBox_Country">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="5">
-                <StringItem index="0" value="United States of America"/>
-                <StringItem index="1" value="England"/>
-                <StringItem index="2" value="Australia"/>
-                <StringItem index="3" value="Sri Lanka"/>
-                <StringItem index="4" value="South Korea"/>
+              <StringArray count="6">
+                <StringItem index="0" value="NOT SELECTED"/>
+                <StringItem index="1" value="United States of America"/>
+                <StringItem index="2" value="England"/>
+                <StringItem index="3" value="Australia"/>
+                <StringItem index="4" value="Sri Lanka"/>
+                <StringItem index="5" value="South Korea"/>
               </StringArray>
             </Property>
           </Properties>
@@ -732,6 +733,22 @@
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="1230" y="360" width="-1" height="-1"/>
+            </Constraint>
+          </Constraints>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel17">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="18" style="1"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="%"/>
+          </Properties>
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+              <AbsoluteConstraints x="1180" y="100" width="30" height="30"/>
             </Constraint>
           </Constraints>
         </Component>
